refactor(系统设置): 优化用户管理的树结构数据返回方式